<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            tools:ignore="MissingConstraints">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textStyle="italic"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/txt_size"
                android:padding="10dp"
                />
            <TextView
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"
                android:textSize="16sp"
                android:textAlignment="center"
                android:padding="16dp"
                tools:ignore="InvalidId" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            tools:ignore="MissingConstraints">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/purple_500"
                android:textStyle="italic"
                android:textSize="@dimen/txt_size"
                android:padding="10dp"
                />
            <TextView
                android:id="@+id/Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"
                android:textSize="16sp"
                android:textAlignment="center"
                android:padding="16dp"
                tools:ignore="InvalidId" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            tools:ignore="MissingConstraints">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/purple_500"
                android:textStyle="italic"
                android:padding="10dp"
                android:textSize="@dimen/txt_size"
                />
            <TextView
                android:id="@+id/Prix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"
                android:textSize="16sp"
                android:textAlignment="center"
                android:padding="16dp"
                tools:ignore="InvalidId" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            tools:ignore="MissingConstraints">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_available"
                android:textStyle="italic"
                android:textSize="@dimen/txt_size"
                android:textColor="@color/purple_500"
                android:padding="10dp"
                />
            <TextView
                android:id="@+id/Quantite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"
                android:textSize="@dimen/text_size"
                android:textAlignment="center"
                android:padding="16dp"
                tools:ignore="InvalidId" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            tools:ignore="MissingConstraints">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_quantity"
                android:textStyle="italic"
                android:textSize="@dimen/txt_size"
                android:textColor="@color/purple_500"
                android:padding="10dp"
                />
            <TextView
                android:id="@+id/Alert_quantite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"
                android:textSize="16sp"
                android:textAlignment="center"
                android:padding="16dp"
                tools:ignore="InvalidId" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>